Modal design added and updated responsive

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                                 </div>
                                 <h4 class="happy-font-carolina">rose</h4>
                                 <p class="happy-flower-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus facilisis iaculis metus.</p>
-                                <a class="waves-effect waves-light btn happy-package-btn happy-package-details">VIEW DETAILS</a>
+                                <a class="waves-effect waves-light btn happy-package-btn happy-package-details modal-trigger" href="#modal-rose">VIEW DETAILS</a>
                                 <a class="waves-effect waves-light btn happy-package-btn happy-package-quote">GET A FREE QUOTE</a>
                             </div>
                         </div>
@@ -107,7 +107,7 @@
                                 </div>
                                 <h4 class="happy-font-carolina">tulips</h4>
                                 <p class="happy-flower-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus facilisis iaculis metus.</p>
-                                <a class="waves-effect waves-light btn happy-package-btn happy-package-details">VIEW DETAILS</a>
+                                <a class="waves-effect waves-light btn happy-package-btn happy-package-details modal-trigger" href="#modal-tulips">VIEW DETAILS</a>
                                 <a class="waves-effect waves-light btn happy-package-btn happy-package-quote">GET A FREE QUOTE</a>
                             </div>
                         </div>
@@ -118,7 +118,7 @@
                                 </div>
                                 <h4 class="happy-font-carolina">orchid</h4>
                                 <p class="happy-flower-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus facilisis iaculis metus.</p>
-                                <a class="waves-effect waves-light btn happy-package-btn happy-package-details">VIEW DETAILS</a>
+                                <a class="waves-effect waves-light btn happy-package-btn happy-package-details modal-trigger" href="#modal-orchid">VIEW DETAILS</a>
                                 <a class="waves-effect waves-light btn happy-package-btn happy-package-quote">GET A FREE QUOTE</a>
                             </div>
                         </div>
@@ -147,7 +147,7 @@
                             </ul>
                         </div>
                         <div class="happy-team-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. </div>
-                        <a class="happy-team-more">KNOW MORE</a>
+                        <a class="happy-team-more modal-trigger" href="#modal-team-rose">KNOW MORE</a>
                     </div>
                 </div>
                 <div class="col s6 m4 l2">
@@ -166,7 +166,7 @@
                             </ul>
                         </div>
                         <div class="happy-team-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. </div>
-                        <a class="happy-team-more">KNOW MORE</a>
+                        <a class="happy-team-more modal-trigger" href="#modal-team-rose">KNOW MORE</a>
                     </div>
                 </div>
                 <div class="col s6 m4 l2">
@@ -185,7 +185,7 @@
                             </ul>
                         </div>
                         <div class="happy-team-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. </div>
-                        <a class="happy-team-more">KNOW MORE</a>
+                        <a class="happy-team-more modal-trigger" href="#modal-team-rose">KNOW MORE</a>
                     </div>
                 </div>
                 <div class="col s6 m4 l2">
@@ -204,7 +204,7 @@
                             </ul>
                         </div>
                         <div class="happy-team-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. </div>
-                        <a class="happy-team-more">KNOW MORE</a>
+                        <a class="happy-team-more modal-trigger" href="#modal-team-rose"">KNOW MORE</a>
                     </div>
                 </div>
                 <div class="col s6 m4 l2">
@@ -223,7 +223,7 @@
                             </ul>
                         </div>
                         <div class="happy-team-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. </div>
-                        <a class="happy-team-more">KNOW MORE</a>
+                        <a class="happy-team-more modal-trigger" href="#modal-team-rose">KNOW MORE</a>
                     </div>
                 </div>
             </div>
@@ -445,11 +445,181 @@
             <p>Copyright 2019. Happy Hearts Events Planning. All rights reserved.</p>
         </div>
     </div>
+     <div id="modal-team-rose" class="modal">
+        <span class="happy-modal-close"><a href="#!" class="modal-close waves-effect waves-green btn-flat">x</a></span>
+        <div class="modal-content">
+            <div class="happy-modal-team-img">
+                <img src="src/img/mugshot.png">
+                <span class="happy-modal-team-name">rose</span>
+            </div>
+            <div class="happy-modal-content-wrapper">
+                <ul>
+                    <li><span class="happy-modal-question">Name: DENIEZE A JUAN</span></li>
+                    <li>
+                        <p>
+                            <span class="happy-modal-question">Favorite part of the wedding and why</span>
+                            <span class="happy-modal-answer">Actually All parts of special day is my Favorite specially when I get to use or discover my ability when it comes of conflicts or different matters. But one of my FAVORITE is PROGRAM because it let people share their special moment of their life, on how or what kind of people they are, also helps specially both families know more about the couple and bring them closer. For me program is the best part of the special day. I call it the CLIMAX of their Special day.
+                            </span>
+                        </p>
+                    </li>
+
+                    <li>
+                        <p>
+                            <span class="happy-modal-question">Brief History how you get into wedding/coordination industry</span>
+                            <span class="happy-modal-answer">
+                                Almost 1 year after I Graduated I have no work early 2012 our former neighbor saw me ask me if I have work and willing to have a sideline then I started right away and the rest is History.
+                            </span>
+                        </p>
+                    </li>
+
+                    <li>
+                        <p>
+                            <span class="happy-modal-question"></span>
+                            <span class="happy-modal-answer"></span>
+                        </p>
+                    </li>
+                    <li>
+                        <p>
+                            <span class="happy-modal-question">Biggest achievements related to your credentials(optional)</span>
+                            <span class="happy-modal-answer">N/A</span>
+                        </p>
+                    </li>
+                    <li>
+                        <p>
+                            <span class="happy-modal-question">Hobbies</span>
+                            <span class="happy-modal-answer">
+                                -   Baking<br>
+                                -   Listening / supporting local music<br>
+                                -   Frustrated food Critic / Food Enthusiast<br>
+                                -   Photo enthusiast<br>
+                            </span>
+                        </p>
+                    </li>
+                    <li>
+                        <p>
+                            <span class="happy-modal-question">Interests</span>
+                            <span class="happy-modal-answer">
+                                -   Helping others (outreach)<br>
+                                -   Animal advocate<br>
+                                -   Photography<br>
+                            </span>
+                        </p>
+                    </li>
+                    <li>
+                        <p>
+                            <span class="happy-modal-question">One thing you'd like to share about you that a few people know: I'm a flexitarian/dirty vegetarian. On the road to being 90% vegan/ 100% plant-based eater. </span>
+                            <span class="happy-modal-answer"> -   I love food but not much into Chinese food, Sweets and more into less GLUTEN<br>Disclaimer “ I bake, but I don’t taste it. “ hehez</span>
+                        </p>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div id="modal-rose" class="modal">
+        <span class="happy-modal-close"><a href="#!" class="modal-close waves-effect waves-green btn-flat">x</a></span>
+        <div class="modal-content">
+            <div class="valign-wrapper">
+                <img src="src/img/rose-red.png">
+                <span class="happy-font-carolina happy-package-modal-header">rose</span>
+            </div>
+            <div class="happy-modal-content-wrapper">
+                <h3>ON-THE-DAY WEDDING COORDINATION</h3>
+                <ul>
+                    <li>*Program conceptualization</li>
+                    <li>*3 meet ups</li>
+                    <li>*Prenup assistant 1 coor only</li>
+                    <li>*Unlimited Consultation via chat or text message</li>
+                    <li>*Assist from hotel prep church and reception</li>
+                    <li>*Assistance of guests and table Assignment coordination</li>
+                    <li>*2 weeks before the wedding the couple need to surrender all the suppliers contact to finalize and coordinate one by one </li>
+                    <li>*Coordination with the bridal entourage on what to prepare before the wedding via text message or facebook messager</li>
+                    <li>*1 head coordinator</li>
+                    <li>*1 bride assistant</li>
+                    <li>*1 Groom Assistant</li>
+                    <li>*1 Church Asst.</li>
+                    <li>*2 reception Assistant before the program or reception time.</li>
+                    <li>*With two way radio</li>
+                </ul>
+                <h4>Freebies:</h4>
+                <ul>
+                    <li>White robe with “Bride” embroidery at the back(rented only)</li>
+                    <li>Bridesmaids Robe’s (rented only)</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div id="modal-tulips" class="modal">
+        <span class="happy-modal-close"><a href="#!" class="modal-close waves-effect waves-green btn-flat">x</a></span>
+        <div class="modal-content">
+            <div class="valign-wrapper">
+                <img src="src/img/tulips-red.png">
+                <span class="happy-font-carolina happy-package-modal-header">tulips</span>
+            </div>
+            <div class="happy-modal-content-wrapper">
+                <h3>ON-THE-DAY WEDDING COORDINATION</h3>
+                <ul>
+                    <li>*Program conceptualization</li>
+                    <li>*3 meet ups</li>
+                    <li>*Prenup assistant 1 coor only</li>
+                    <li>*Unlimited Consultation via chat or text message</li>
+                    <li>*Assist from hotel prep church and reception</li>
+                    <li>*Assistance of guests and table Assignment coordination</li>
+                    <li>*2 weeks before the wedding the couple need to surrender all the suppliers contact to finalize and coordinate one by one </li>
+                    <li>*Coordination with the bridal entourage on what to prepare before the wedding via text message or facebook messager</li>
+                    <li>*1 head coordinator</li>
+                    <li>*1 bride assistant</li>
+                    <li>*1 Groom Assistant</li>
+                    <li>*1 Church Asst.</li>
+                    <li>*2 reception Assistant before the program or reception time.</li>
+                    <li>*With two way radio</li>
+                </ul>
+                <h4>Freebies:</h4>
+                <ul>
+                    <li>White robe with “Bride” embroidery at the back(rented only)</li>
+                    <li>Bridesmaids Robe’s (rented only)</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div id="modal-orchid" class="modal">
+        <span class="happy-modal-close"><a href="#!" class="modal-close waves-effect waves-green btn-flat">x</a></span>
+        <div class="modal-content">
+            <div class="valign-wrapper">
+                <img src="src/img/orchid-red.png">
+                <span class="happy-font-carolina happy-package-modal-header">orchid</span>
+            </div>
+            <div class="happy-modal-content-wrapper">
+                <h3>ON-THE-DAY WEDDING COORDINATION</h3>
+                <ul>
+                    <li>*Program conceptualization</li>
+                    <li>*3 meet ups</li>
+                    <li>*Prenup assistant 1 coor only</li>
+                    <li>*Unlimited Consultation via chat or text message</li>
+                    <li>*Assist from hotel prep church and reception</li>
+                    <li>*Assistance of guests and table Assignment coordination</li>
+                    <li>*2 weeks before the wedding the couple need to surrender all the suppliers contact to finalize and coordinate one by one </li>
+                    <li>*Coordination with the bridal entourage on what to prepare before the wedding via text message or facebook messager</li>
+                    <li>*1 head coordinator</li>
+                    <li>*1 bride assistant</li>
+                    <li>*1 Groom Assistant</li>
+                    <li>*1 Church Asst.</li>
+                    <li>*2 reception Assistant before the program or reception time.</li>
+                    <li>*With two way radio</li>
+                </ul>
+                <h4>Freebies:</h4>
+                <ul>
+                    <li>White robe with “Bride” embroidery at the back(rented only)</li>
+                    <li>Bridesmaids Robe’s (rented only)</li>
+                </ul>
+            </div>
+        </div>
+    </div>
     <script src="src/js/jquery-3.4.1.slim.min.js"></script>
     <script src="src/js/materialize.min.js"></script>
     <script type="text/javascript">
     $(document).ready(() => {
         $('.sidenav').sidenav();
+        $('.modal').modal();
         $('.datepicker').datepicker();
         $('#message').characterCounter();
 
